force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>[a0B][Invoice__c] Notas fiscais do sistema.</description>
    <label>Nota fiscal</label>
    <nameField>
        <label>Nota fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notas fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>