force-app/main/default/objects/Invoice__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome da conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>Notas_fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>