force-app/main/default/objects/Invoice__c/fields/CarrierLkp__c.field-meta.xml
<CustomField>
    <fullName>CarrierLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transportadora</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>Notas_fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>