force-app/main/default/objects/Invoice__c/fields/ClientCodeFml__c.field-meta.xml
<CustomField>
    <fullName>ClientCodeFml__c</fullName>
    <formula>AccountLkp__r.CodeCustomerTxt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do cliente</label>
    <type>Text</type>
</CustomField>