force-app/main/default/objects/Invoice__c/fields/DaysDueFml__c.field-meta.xml
<CustomField>
    <fullName>DaysDueFml__c</fullName>
    <formula>IF( 
    ISBLANK( ShipmentDeliveredFml__c )  , 
      IF(
      TODAY()  &gt;  ExpectedDeliveryDateDte__c, 
      TODAY() - ExpectedDeliveryDateDte__c, 
      0) ,
    If( 
     ShipmentDeliveredFml__c &gt; ExpectedDeliveryDateDte__c,
     ShipmentDeliveredFml__c - ExpectedDeliveryDateDte__c,
     0)
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias atraso entrega</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>