force-app/main/default/objects/Invoice__c/fields/DocumentDateDte__c.field-meta.xml
<CustomField>
    <fullName>DocumentDateDte__c</fullName>
    <label>Data de emissão</label>
    <type>Date</type>
</CustomField>