force-app/main/default/objects/Invoice__c/fields/DocumentNumberTxt__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumberTxt__c</fullName>
    <externalId>true</externalId>
    <label>Número do documento</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>