force-app/main/default/objects/Invoice__c/fields/ExpectedDeliveryDateDte__c.field-meta.xml
<CustomField>
    <fullName>ExpectedDeliveryDateDte__c</fullName>
    <label>Data de previsão</label>
    <type>Date</type>
</CustomField>