force-app/main/default/objects/Invoice__c/fields/GrossWeightNmb__c.field-meta.xml
<CustomField>
    <fullName>GrossWeightNmb__c</fullName>
    <label>Peso bruto</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>