force-app/main/default/objects/Invoice__c/fields/IncotermsTxt__c.field-meta.xml
<CustomField>
    <fullName>IncotermsTxt__c</fullName>
    <label>Incoterms</label>
    <length>3</length>
    <type>Text</type>
</CustomField>