force-app/main/default/objects/Invoice__c/fields/LocalshippingTxt__c.field-meta.xml
<CustomField>
    <fullName>LocalshippingTxt__c</fullName>
    <label>Local expedição</label>
    <length>4</length>
    <type>Text</type>
</CustomField>