force-app/main/default/objects/Invoice__c/fields/MerchandiseReceiverTxt__c.field-meta.xml
<CustomField>
    <fullName>MerchandiseReceiverTxt__c</fullName>
    <label>Recebedor de mercadoria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>