force-app/main/default/objects/Invoice__c/fields/NetWeightNmb__c.field-meta.xml
<CustomField>
    <fullName>NetWeightNmb__c</fullName>
    <label>Peso líquido</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>