force-app/main/default/objects/Invoice__c/fields/OperationNatureVTxt__c.field-meta.xml
<CustomField>
    <fullName>OperationNatureVTxt__c</fullName>
    <label>Descrição do CFOP</label>
    <length>60</length>
    <type>Text</type>
</CustomField>