force-app/main/default/objects/Invoice__c/fields/PaymentTermTxt__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermTxt__c</fullName>
    <label>Condição de pagamento</label>
    <length>4</length>
    <type>Text</type>
</CustomField>