force-app/main/default/objects/Invoice__c/fields/RemittanceLkp__c.field-meta.xml
<CustomField>
    <fullName>RemittanceLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número da remessa</label>
    <referenceTo>Remittance__c</referenceTo>
    <relationshipLabel>Notas fiscais</relationshipLabel>
    <relationshipName>Notas_fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>