force-app/main/default/objects/Invoice__c/fields/RemittanceStatusFml__c.field-meta.xml
<CustomField>
    <fullName>RemittanceStatusFml__c</fullName>
    <formula>RemittanceLkp__r.StatusFml__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status alterado de acordo com as datas da remessa.</inlineHelpText>
    <label>Status da remessa</label>
    <type>Text</type>
</CustomField>