force-app/main/default/objects/Invoice__c/fields/SalesResponsableTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesResponsableTxt__c</fullName>
    <label>Responsável de vendas</label>
    <length>10</length>
    <type>Text</type>
</CustomField>