force-app/main/default/objects/Invoice__c/fields/ShipmentDelayDaysFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDelayDaysFml__c</fullName>
    <formula>IF( 
   RemittanceLkp__r.ShipmentTransitDte__c &gt; DocumentDateDte__c  , 
   RemittanceLkp__r.ShipmentTransitDte__c - DocumentDateDte__c  ,
   0
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias atraso embarque</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>