force-app/main/default/objects/Invoice__c/fields/ShipmentDeliveredFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentDeliveredFml__c</fullName>
    <formula>RemittanceLkp__r.ShipmentDeliveredDte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercadoria entregue</label>
    <type>Date</type>
</CustomField>