force-app/main/default/objects/Invoice__c/fields/ShipmentTransitFml__c.field-meta.xml
<CustomField>
    <fullName>ShipmentTransitFml__c</fullName>
    <formula>RemittanceLkp__r.ShipmentTransitDte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mercadoria embarcada</label>
    <type>Date</type>
</CustomField>