force-app/main/default/objects/Invoice__c/fields/StatusInvoiceBln__c.field-meta.xml
<CustomField>
    <fullName>StatusInvoiceBln__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nota fiscal cancelada</label>
    <type>Checkbox</type>
</CustomField>