force-app/main/default/objects/Invoice__c/fields/TotalCostNmb__c.field-meta.xml
<CustomField>
    <fullName>TotalCostNmb__c</fullName>
    <label>Valor total</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>