force-app/main/default/objects/Invoice__c/fields/VolumeNumberNmb__c.field-meta.xml
<CustomField>
    <fullName>VolumeNumberNmb__c</fullName>
    <label>Número volumes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>