force-app/main/default/objects/Invoice__c/fields/ZRRedispatchShippCompanyTxt__c.field-meta.xml
<CustomField>
    <fullName>ZRRedispatchShippCompanyTxt__c</fullName>
    <label>Redespacho</label>
    <length>10</length>
    <type>Text</type>
</CustomField>